--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="gray">#353232</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#fe6900</color>
-    <color name="blue">#3AA3A5</color>
+    <color name="blue">#0030FF</color>
 </resources>
